IRtest_out/077_matrix_tran.err
irs/077_matrix_tran.ll:34:29: error: invalid getelementptr indices
  %v38 = getelementptr i32, i32* %v31, i32 0, i32 2
                            ^
1 error generated.
